--- a/.Bashrc
+++ b/.Bashrc
@@ -1,33 +1,42 @@
 # ~/.bashrc - Custom shell config for iOS-Tuxshell
 
-# Prompt
+# Custom prompt: green user@host, blue working directory, then reset color
 PS1='\[\e[1;32m\]\u@\h:\[\e[1;34m\]\w\[\e[0m\]\$ '
 
-# Safe file operations
+# Safe file operations: prompt before overwrite/delete
 alias rm='rm -i'
 alias cp='cp -i'
 alias mv='mv -i'
 
-# File listing
-alias ls='ls --color=auto'
+# File listing with color support and fallbacks
+alias ls='ls --color=auto 2>/dev/null || ls'
 alias ll='ls -lah'
 alias la='ls -A'
 alias l='ls -CF'
 
-# Git commands
+# Git shortcuts for common commands
 alias gs='git status'
 alias gl='git log --oneline --graph --decorate'
 alias gp='git pull'
 alias gpush='git push'
 
-# System commands
+# System commands shortcuts
 alias cls='clear'
 alias update='sudo apt update && sudo apt upgrade -y'
 alias install='sudo apt install'
 
-# Project shortcuts (specific to ios-Tuxshell)
+# Add custom bin folder to PATH if it exists
+if [ -d "$HOME/ios-Tuxshell/bin" ]; then
+export PATH="$HOME/ios-Tuxshell/bin:$PATH"
+fi
+
+# Prevent overwriting files with >
+set -o noclobber
+
+# Project-specific aliases for quick access
 alias runmain='python3 ~/ios-Tuxshell/main.py'
 alias menu='bash ~/ios-Tuxshell/ai-menu.sh'
 
-# Editor
+# Set default editor
 export EDITOR=vim
+
