--- a/.Bashrc
+++ b/.Bashrc
@@ -40,3 +40,11 @@ alias menu='bash ~/ios-Tuxshell/ai-menu.sh'
 # Set default editor
 export EDITOR=vim
 
+# Custom handler for unknown commands - runs command_assistant.py
+command_not_found_handle() {
+local cmd="$1"
+shift
+local args="$*"
+python3 ~/ios-Tuxshell/command_assistant.py "$cmd" $args
+return 127
+}
